add Input system dependence to INPUT_SYSTEM defining symbol

--- a/Graphene/InputManager/InputManager.asmdef
+++ b/Graphene/InputManager/InputManager.asmdef
@@ -2,8 +2,7 @@
     "name": "Graphene.InputManager",
     "references": [
         "Graphene.Utils",
-        "Graphene.UtilsEditor",
-        "Unity.InputSystem"
+        "Graphene.UtilsEditor"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
