--- a/package.json
+++ b/package.json
@@ -4,5 +4,7 @@
     "version": "0.1.2",
     "unity": "2018.2",
     "description": ". . .",
-    "dependencies": { }
+    "dependencies": {
+        "graphene.utils": "1.0.0"
+     }
 }
